Fix gap between avatar grid and content

--- a/app/javascript/mastodon/features/collections/detail/collection_list_item.module.scss
+++ b/app/javascript/mastodon/features/collections/detail/collection_list_item.module.scss
@@ -15,7 +15,7 @@
   flex-grow: 1;
   display: flex;
   align-items: center;
-  column-gap: 16px;
+  column-gap: 12px;
 }
 
 .avatarGrid {
